Fixed CSS alignment of title with javascript disabled

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -172,7 +172,6 @@ ul.navigation-content-list {
 #welcome-content {
   width: 75%;
   left: 50%;
-  margin: 0 0 0 -37.5%;
 }
 
 #footsteps-image {
